# MyLearning

./: .gitignore
Courses/COMP2119/: 3035973799-C.cpp  3036128004-A.cpp  3036128004-B.cpp  3036128004-C.cpp  3036128690-C.cpp  3036128846-A.cpp  3036128846-B.cpp  3036128846-C.cpp  myoutputB1.txt  myoutputB2.txt  myoutputB3.txt  myoutputC1.txt  myoutputC2.txt  myoutputC3.txt  sampleA1.in  sampleA2.in  sampleA3.in  sampleB1.ans  sampleB1.in  sampleB2.ans  sampleB2.in  sampleB3.ans  sampleB3.in  sampleC1.ans  sampleC1.in  sampleC2.ans  sampleC2.in  sampleC3.ans  sampleC3.in  test.sh
scanAPP/: CMakeLists.txt
scanAPP/config/: record.yaml  scan.yaml
scanAPP/include/: orbbec_camera.hpp  shared.hpp
scanAPP/src/: capture.cpp  record.cpp
